# vsc-cmake-template

./: .gitignore  .mxproject  CHANGELOG.md  CMakeLists.txt  Git_command_line_cheat_sheet.md  LICENSE.md  Makefile  PreLoad.cmake  README.md  cmake-test.code-workspace  cmake-test.ioc  gcc-arm-none-eabi.cmake  mcu-flash.bat
Core/Inc/: itm_sendchar.h
Core/Src/: main.c  stm32u5xx_hal_msp.c  syscalls.c
CubeMX/: Makefile
CubeMX/src/: startup_stm32u575xx.s
HowTos/: New_STM32_Project.md  Setup_CMake.md  Setup_Debug.md  Setup_VSCODE.md  notes.md
Project/src/: projectMain.cpp
